@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.theoath" name="TheOath" provider-name="host505" version="3.5.007">
+<addon id="plugin.video.theoath" name="TheOath" provider-name="host505" version="3.6.000">
     <requires>
         <!--<import addon="xbmc.python" version="2.20.0" />-->
         <import addon="script.theoath.artwork" />
@@ -21,7 +21,7 @@
     <extension point="xbmc.addon.metadata">
         <reuselanguageinvoker>false</reuselanguageinvoker>
         <summary lang="en_GB">TheOath</summary>
-        <description lang="en_GB">Multi-source and multi-scraper package add-on. A basic scraper pack is provided but also supports Openscrapers, and native Orion integration.[CR][CR]The author does not host any of the content in this add-on and takes no responsibility for content found.</description>
+        <description lang="en_GB">Multi-source add-on with native Orion integration.[CR][CR]The author does not host any of the content in this add-on and takes no responsibility for content found.</description>
         <platform>all</platform>
         <license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
         <forum />
